Update app colors and added blades for minutes

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -18,3 +18,11 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$primary: #0091bc;
+$dark-blue: #3c4d71;
+
+$theme-colors: (
+  "dark-blue": $dark-blue,
+  "default": whitesmoke,
+);
