--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,8 +3,12 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://use.fontawesome.com/releases/v5.1.1/css/all.css');
 
-// Variables
+// Other Libraries
+@import '~v-calendar/lib/v-calendar.min.css';
+
+// Application imports
 @import 'variables';
+@import 'components/tables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
@@ -12,4 +16,8 @@
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
