Add minute view and changes for that to work

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,7 @@
 // Application imports
 @import 'variables';
 @import 'components/tables';
+@import 'components/typography';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
