--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,9 +1,8 @@
-
 // Body
 $body-bg: #e4eaec;
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -11,7 +10,7 @@ $line-height-base: 1.6;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
-$pink: #f66D9b;
+$pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
@@ -20,14 +19,14 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 $primary: #0091bc;
-$dark-blue: #3c4d71;
+$dark-blue: #006184;
 // $border-radius: 2rem;
-$border-radius:    .4rem !default;
-$border-radius-lg: .5rem !default;
-$border-radius-sm: .25rem !default;
+$border-radius: 0.4rem !default;
+$border-radius-lg: 0.5rem !default;
+$border-radius-sm: 0.25rem !default;
 $custom-checkbox-indicator-border-radius: $border-radius-sm !default;
 
 $theme-colors: (
-  "dark-blue": $dark-blue,
-  "default": whitesmoke,
+    'dark-blue': $dark-blue,
+    'default': whitesmoke,
 );
