--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import 'effects';
 
 .navbar-laravel {
   background-color: #fff;
@@ -26,4 +27,9 @@
 
 .avatar {
   max-width: 2rem;
+}
+
+// Helpers
+.overflow-hidden {
+    overflow: hidden;
 }
