Add invite message to topic form modal

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -29,6 +29,7 @@ $custom-checkbox-indicator-border-radius: $border-radius-sm !default;
 $theme-colors: (
     'dark-blue': $dark-blue,
     'default': whitesmoke,
+    'whatsapp': #4be677,
 );
 
 // $enable-shadows: true;
