--- a/resources/sass/_site-layout.sass
+++ b/resources/sass/_site-layout.sass
@@ -1,6 +1,6 @@
 $navbarHeight: 55px
-$textColor: white
-$backgroundColor: $dark
+$textColor: inherit
+$backgroundColor: $darkblue
 
 body,
 .body-container
@@ -46,8 +46,6 @@ body,
         overflow: hidden
         display: flex
         flex-direction: column
-        background-color: $backgroundColor
-        color: $textColor
         user-select: none
 
         .site-menubar-body
@@ -106,11 +104,10 @@ body,
             .site-menubar-footer-button
                 padding: 24px 36px
                 transition: all .2s ease
-                color: rgba(255, 255, 255, 0.5)
+                color: $textColor
                 opacify: 0.5
                 &:hover
                     opacify: 1
-                    color: $textColor
                     background-color: rgba(0,0,0,0.1)
 
 
