--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,3 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
-
 // Plugins
 @import '~axios-progress-bar/dist/nprogress.css';
 @import '~v-calendar/lib/v-calendar.min.css';
@@ -9,6 +5,7 @@
 // Variables
 @import 'variables';
 
+@import 'tailwind';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
