--- a/resources/sass/_transitions.scss
+++ b/resources/sass/_transitions.scss
@@ -2,3 +2,10 @@
 .card * {
     transition: all 0.2s ease;
 }
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+}
